force-app/main/default/objects/Reserve__c/Reserve__c.object-meta.xml
<CustomObject>
    <description>Contains Information about every type of Reserves available in Salary Distribution</description>
    <label>Reserve</label>
    <nameField>
        <label>Reserve Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reserves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>