force-app/main/default/objects/Reserve__c/fields/Family_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Family_Reserve__c</fullName>
    <formula>Salary__r.Family_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>