force-app/main/default/objects/Reserve__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary Distribution</label>
    <referenceTo>Salary_Distribution__c</referenceTo>
    <relationshipLabel>Reserves</relationshipLabel>
    <relationshipName>Reserves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>